<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:paddingTop="20dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#ED1C63"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/weightInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/weight_hint"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColorHint="#E7BBC9"
        android:textStyle="bold|italic"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/heightInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/height_hint"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColorHint="#E7BBC9"
        android:textStyle="bold|italic"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#CA6E8E"
        android:text="@string/calculate_button"
        android:textAllCaps="false"
        android:textColor="#950535"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:fontFamily="sans-serif"
        android:paddingTop="16dp"
        android:text="@string/bmi_result"
        android:textAllCaps="false"
        android:textColor="#BF1B52"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/interpretationText"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:paddingTop="16dp"
        android:text="@string/interpretation"
        android:textColor="#BF1B52"
        android:textSize="18sp" />

    <Button
        android:id="@+id/BackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#CA6E8E"
        android:text="@string/back_button"
        android:textColor="#950535"
        android:textSize="20sp" />

</LinearLayout>